testdata/invalid/unknown_super.sol
rise Child radiate Parent {
    private int x;
}
